--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Natual Skincare by Monica</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -44,7 +44,7 @@ img {margin-bottom: -7px}
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
     <img src="IMG_20190108_2024045.jpg" style="width:100%">
-    <img src="/w3images/sound.jpg" style="width:100%">
+    <img src="IMG_20190108_2110063.jpg" style="width:100%">
     <img src="/w3images/woods.jpg" style="width:100%">
     <img src="/w3images/rock.jpg" style="width:100%">
     <img src="/w3images/nature.jpg" style="width:100%">
