--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ img {margin-bottom: -7px}
     <img src="IMG_20190108_2024045.jpg" style="width:100%">
     <img src="IMG_20190108_2110063.jpg" style="width:100%">
     <img src="IMG_20190108_2130302.jpg" style="width:100%">
-    <img src="/w3images/rock.jpg" style="width:100%">
+    <img src="IMG_20190108_2124431.jpg" style="width:100%">
     <img src="/w3images/nature.jpg" style="width:100%">
     <img src="/w3images/mist.jpg" style="width:100%">
   </div>
