--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {margin-bottom: -7px}
     <img src="IMG_20190108_2130302.jpg" style="width:100%">
     <img src="IMG_20190108_2124431.jpg" style="width:100%">
     <img src="IMG_20190108_2130357.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="IMG_20190108_2133329.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
