--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ img {margin-bottom: -7px}
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/coffee.jpg" style="width:100%">
+    <img src="IMG_20190108_2136336.jpg" style="width:100%">
     <img src="/w3images/bridge.jpg" style="width:100%">
     <img src="/w3images/notebook.jpg" style="width:100%">
     <img src="/w3images/london.jpg" style="width:100%">
