--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ img {margin-bottom: -7px}
     <img src="IMG_20190108_2149093.jpg" style="width:100%">
     <img src="IMG_20190108_2202153.jpg" style="width:100%">
     <img src="IMG_20190108_2206091.jpg" style="width:100%">
-    <img src="/w3images/avatar_g.jpg" style="width:100%">
+    <img src="IMG_20190108_2207252.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
