--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ img {margin-bottom: -7px}
 
   <div class="w3-third">
     <img src="IMG_20190108_2222002.jpg" style="width:100%">
-    <img src="/w3images/workbench.jpg" style="width:100%">
+    <img src="IMG_20190108_2230303.jpg" style="width:100%">
     <img src="/w3images/gondol.jpg" style="width:100%">
     <img src="/w3images/skies.jpg" style="width:100%">
     <img src="/w3images/lights.jpg" style="width:100%">
