--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ img {margin-bottom: -7px}
     <img src="IMG_20190108_2222002.jpg" style="width:100%">
     <img src="IMG_20190108_2230303.jpg" style="width:100%">
     <img src="IMG_20190108_2243386.jpg" style="width:100%">
-    <img src="/w3images/skies.jpg" style="width:100%">
+    <img src="IMG_20190124_2140154.jpg" style="width:100%">
     <img src="/w3images/lights.jpg" style="width:100%">
     <img src="/w3images/workshop.jpg" style="width:100%">
   </div>
