--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ img {margin-bottom: -7px}
     <img src="IMG_20190108_2243386.jpg" style="width:100%">
     <img src="IMG_20190124_2140154.jpg" style="width:100%">
     <img src="IMG_20190112_2010478.jpg" style="width:100%">
-    <img src="/w3images/workshop.jpg" style="width:100%">
+    <img src="IMG_20190124_2151406.jpg" style="width:100%">
   </div>
 </div>
 
